<resources>
    <string name="app_name">Discover</string>
    <string name="tags_label">Tags:</string>
    <string name="status_string">%1s Mins</string>
    <string name="retry_string">Retry</string>
    <string name="exhausted_string">No more results…</string>
    <string name="error_message">Error retrieving data, Check Network.</string>
    <string name="retry_message">Error retrieving data. Tap to retry.</string>
    <string name="restaurant_closed_message">Closed</string>


    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_desc">Food, cuisine, type</string>
    <string name="restaurant_cost">$50</string>
    <string name="open_still">Open</string>
    <string name="arriving_minutes">15 mins</string>
    <string name="delivery_cost">$0.00</string>
    <string name="review_ratings">4.0 / 5.0(1234ratings)</string>
    <string name="restaurant_type">Italian</string>

</resources>