<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/restaurant_cover_image"
            android:layout_width="@dimen/image_padding"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/left_padding"
            android:paddingTop="@dimen/top_padding"
            android:paddingEnd="@dimen/right_padding"
            android:paddingBottom="@dimen/bottom_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/restaurant_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/restaurant_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_desc" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/restaurant_item_delivery_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_cost"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/restaurant_item_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/open_still"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>